--- a/gradle.properties
+++ b/gradle.properties
@@ -12,8 +12,10 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Wed Feb 24 11:05:11 IST 2016
-systemProp.http.proxyHost=10.10.78.22
+#Wed Mar 23 13:16:55 IST 2016
+systemProp.http.proxyPassword=
 systemProp.https.proxyPort=3128
+systemProp.http.proxyHost=10.10.78.22
 systemProp.https.proxyHost=10.10.78.22
+systemProp.http.proxyUser=cs1140258
 systemProp.http.proxyPort=3128
